--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -11,12 +11,11 @@
 
 <body>
     <div class="container my-5 ">
-        <form class="form-inline" id="signUpUser">
+        <form class="form-inline" id="signUpUser" hidden>
             <div class="mb-3">
                 <label class="form-label">Name</label>
                 <input type="text" class="form-control" placeholder="aritra lahiri" id="userName" required>
             </div>
-            <div hidden id="slotID"></div>
             <div class="mb-3">
                 <label class="form-label">Email address</label>
                 <input type="email" class="form-control" placeholder="name@example.com" id="userEmail" required>
@@ -28,8 +27,24 @@
             <div class="mb-3">
                 <button type="submit" class="btn btn-success">SignUp</button>
             </div>
+            <a href="#">Existing User - Login</a>
         </form>
-        <a href="#">Existing User - Login</a>
+    </div>
+    <div class="container my-5 ">
+        <form class="form-inline" id="logInUser">
+            <div class="mb-3">
+                <label class="form-label">Email address</label>
+                <input type="email" class="form-control" placeholder="name@example.com" id="userLogInEmail" required>
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Password</label>
+                <input class="form-control" id="userLogInPassword" type="password" required>
+            </div>
+            <div class="mb-3">
+                <button type="submit" class="btn btn-primary">LogIn</button>
+            </div>
+            <a href="#">New User - SignUp</a>
+        </form>
     </div>
 
 
