--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container my-5 ">
-        <form class="form-inline" id="signUpUser" hidden>
+        <form class="form-inline" id="signUpUser">
             <div class="mb-3">
                 <label class="form-label">Name</label>
                 <input type="text" class="form-control" placeholder="aritra lahiri" id="userName" required>
