--- a/Frontend/Expenses/index.html
+++ b/Frontend/Expenses/index.html
@@ -32,8 +32,11 @@
             </div>
             <div class="mb-3">
                 <button type="submit" class="btn btn-success">Add Expense</button>
+                <button id="btnBuyPremimum" class="btn btn-warning">Buy Premium</button>
+                <button id="btnshowLeaderBoard" hidden class="btn btn-warning">Leaderboard</button>
             </div>
         </form>
+        <h3 id="premiumUserTxt" hidden>You are a premium user.</h3>
     </div>
 
     <div class="container my-5">
@@ -43,7 +46,13 @@
 
     </div>
 
+    <div class="container my-5">
+        <h1>LeaderBoard</h1>
+        <ul class="list-group" id="showAllUserExpenses">
+        </ul>
+    </div>
 
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
