--- a/Frontend/Expenses/index.html
+++ b/Frontend/Expenses/index.html
@@ -46,7 +46,7 @@
 
     </div>
 
-    <div class="container my-5">
+    <div class="container my-5" hidden id="leaderBoard">
         <h1>LeaderBoard</h1>
         <ul class="list-group" id="showAllUserExpenses">
         </ul>
