--- a/Frontend/Auth/index.html
+++ b/Frontend/Auth/index.html
@@ -27,7 +27,6 @@
             <div class="mb-3">
                 <button type="submit" class="btn btn-success">SignUp</button>
             </div>
-            <a href="#">Existing User - Login</a>
         </form>
     </div>
     <div class="container my-5 ">
@@ -43,7 +42,7 @@
             <div class="mb-3">
                 <button type="submit" class="btn btn-primary">LogIn</button>
             </div>
-            <a href="#">New User - SignUp</a>
+            <a href="./ForgotPassword/ForgotPassword.html">Forgot Password</a>
         </form>
     </div>
 
