--- a/Frontend/Expenses/index.html
+++ b/Frontend/Expenses/index.html
@@ -43,6 +43,9 @@
     <div class="container my-5">
         <ul class="list-group" id="showExpenses">
         </ul>
+        <div class="container d-flex align-items-center justify-content-center mb-5" id="pageNo">
+
+        </div>
     </div>
 
     <div class="container my-5" hidden id="leaderBoard">
