--- a/Frontend/Auth/ForgotPassword/ForgotPassword.html
+++ b/Frontend/Auth/ForgotPassword/ForgotPassword.html
@@ -16,16 +16,19 @@
                 <label class="form-label">Email address</label>
                 <input type="email" class="form-control" placeholder="name@example.com" id="userEmailReset">
             </div>
-            <div class="mb-3" id="passDiv">
+            <div class="alert alert-success d-none" id="success-alert">
+                Password set link sent to your email.
+            </div>
+            <!-- <div class="mb-3" id="passDiv">
                 <label class="form-label">Enter new password</label>
                 <input type="password" class="form-control" id="userPassword">
             </div>
             <div class="mb-3" id="passConfirmDiv">
                 <label class="form-label">Confirm password</label>
                 <input type="password" class="form-control" id="userConfirmPassword">
-            </div>
+            </div> -->
             <div class="mb-3">
-                <button type="submit" class="btn btn-danger">Reset Password</button>
+                <button type="submit" class="btn btn-danger" id="sendMail">Set New Password</button>
             </div>
         </form>
     </div>
@@ -33,6 +36,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
 
