--- a/Frontend/Auth/signup.html
+++ b/Frontend/Auth/signup.html
@@ -11,21 +11,24 @@
 
 <body>
     <div class="container my-5 ">
-        <form class="form-inline" id="logInUser">
+        <form class="form-inline" id="signUpUser">
+            <div class="mb-3">
+                <label class="form-label">Name</label>
+                <input type="text" class="form-control" placeholder="aritra lahiri" id="userName" required>
+            </div>
             <div class="mb-3">
                 <label class="form-label">Email address</label>
-                <input type="email" class="form-control" placeholder="name@example.com" id="userLogInEmail" required>
+                <input type="email" class="form-control" placeholder="name@example.com" id="userEmail" required>
             </div>
             <div class="mb-3">
                 <label class="form-label">Password</label>
-                <input class="form-control" id="userLogInPassword" type="password" required>
+                <input class="form-control" id="userPassword" type="password" required>
             </div>
             <div class="mb-3">
-                <button type="submit" class="btn btn-primary">LogIn</button>
-                <a href="./ForgotPassword/ForgotPassword.html">Forgot Password</a>
+                <button type="submit" class="btn btn-success">SignUp</button>
             </div>
+            <a href="./index.html">Already a user Login</a>
         </form>
-        <a href="./signup.html" class="ml-5">Create a account Signup</a>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
